src/objects/FedRAMP_Package__c.object
<CustomObject>
    <description>Package object for FedRAMP application to track Packages</description>
    <fields>
        <fullName>Agency_ATO_Contract__c</fullName>
        <inlineHelpText>If previous ATO had a contract - list contract #</inlineHelpText>
        <label>Agency ATO Contract</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Email__c</fullName>
        <description>Agency/Contract Vehicle Contact  Email - renamed as Agency Contract Email</description>
        <label>Agency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Name__c</fullName>
        <description>Agency/Contract Vehicle Contact Name  - renamed as Agency Contact</description>
        <label>Agency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Phone__c</fullName>
        <description>Agency/Contract Vehicle Contact Phone - Renamed as Agency Contact Phone</description>
        <label>Agency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Attended_FedRAMP_Document_Training__c</fullName>
        <label>Attended FedRAMP Document Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_ISSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backup ISSO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSP_Address__c</fullName>
        <formula>CSP__r.BillingStreet &amp; BR() &amp;  CSP__r.BillingCity &amp; BR() &amp;  CSP__r.BillingState  &amp; BR() &amp;  CSP__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSP Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Name__c</fullName>
        <formula>CSP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Size__c</fullName>
        <label>CSP Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSP_Website__c</fullName>
        <label>CSP Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP</description>
        <label>CSP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Packages (CSP)</relationshipLabel>
        <relationshipName>Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Deployment_Model__c</fullName>
        <label>Cloud Deployment Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_Service_Model__c</fullName>
        <description>Cloud Service Model</description>
        <label>Cloud Service Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software as a Service</fullName>
                </value>
                <value>
                    <fullName>Infrastructure as a Service</fullName>
                </value>
                <value>
                    <fullName>Platform as a Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denied_Removed_Reason__c</fullName>
        <description>Denied/Removed Reason</description>
        <inlineHelpText>Notes on significant events that affect the CSP&apos;s Status</inlineHelpText>
        <label>Reason Removed or Suspended</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Authorization_Date__c</fullName>
        <label>Estimated Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIPS_199_Categorization__c</fullName>
        <description>FIPS-199 Categorization</description>
        <label>FIPS-199 Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Impact Level</fullName>
                </value>
                <value>
                    <fullName>Moderate Impact Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FedRAMP_Readiness__c</fullName>
        <label>FedRAMP Readiness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kickoff_Meeting_Total_Days__c</fullName>
        <label>Kickoff Meeting Total Days</label>
        <summarizedField>FedRAMP_Package_Stage__c.Total_Days__c</summarizedField>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Stages__c</field>
            <operation>equals</operation>
            <value>Kick Off Meeting</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>FedRAMP_Package_Stage__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Package_ID__c</fullName>
        <label>Old Package ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cloud_Service_Model__c</fullName>
        <label>Other Cloud Service Model</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PATO_Approved_Date__c</fullName>
        <inlineHelpText>Date JAB approves P-ATO</inlineHelpText>
        <label>P-ATO Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Package_Complexity__c</fullName>
        <label>Package Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Cost_Savings__c</fullName>
        <inlineHelpText>Please enter total package cost savings in USD. Please use only numbers; special characters are not accepted.</inlineHelpText>
        <label>Package Cost Savings (USD)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Progress__c</fullName>
        <label>Package Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In queue</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Readiness</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SAR</fullName>
                </value>
                <value>
                    <fullName>ConMon</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Status__c</fullName>
        <label>Package Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Readiness</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>ATO Cancelled</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Package Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prelimnary_SSP_Readiness_Rating__c</fullName>
        <label>Prelimnary SSP Readiness Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_ATO_Date__c</fullName>
        <description>Date ATO/Provisional Authorization Granted - Renamed as ATO Date</description>
        <label>Previous ATO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_ATO_Federal_Agency__c</fullName>
        <inlineHelpText>Name of Agency that may have issued an ATO to the CSP</inlineHelpText>
        <label>Previous ATO Federal Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_ISSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary ISSO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Packages_ISSO_Primary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Readiness_Rating__c</fullName>
        <formula>Value(TEXT(Prelimnary_SSP_Readiness_Rating__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Readiness Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Readiness_Total_Days__c</fullName>
        <label>Readiness Total Days</label>
        <summarizedField>FedRAMP_Package_Stage__c.Total_Days__c</summarizedField>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Stages__c</field>
            <operation>equals</operation>
            <value>Readiness</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>FedRAMP_Package_Stage__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Review_Category__c</fullName>
        <description>Review Category</description>
        <label>Review Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>JAB</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Total_Days__c</fullName>
        <label>SAP Total Days</label>
        <summarizedField>FedRAMP_Package_Stage__c.Total_Days__c</summarizedField>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Stages__c</field>
            <operation>equals</operation>
            <value>SAP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>FedRAMP_Package_Stage__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SAR_Total_Days__c</fullName>
        <label>SAR Total Days</label>
        <summarizedField>FedRAMP_Package_Stage__c.Total_Days__c</summarizedField>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Stages__c</field>
            <operation>equals</operation>
            <value>SAR</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>FedRAMP_Package_Stage__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SSP_Total_Days__c</fullName>
        <label>SSP Total Days</label>
        <summarizedField>FedRAMP_Package_Stage__c.Total_Days__c</summarizedField>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Stages__c</field>
            <operation>equals</operation>
            <value>SSP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FedRAMP_Package_Stage__c.Status__c</field>
            <operation>notEqual</operation>
            <value>In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>FedRAMP_Package_Stage__c.Package__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SSP_Training_Confirmation__c</fullName>
        <label>SSP Training Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secure_Repository_Account_Created__c</fullName>
        <inlineHelpText>Date</inlineHelpText>
        <label>Secure Repository Account Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secure_Repository_Account_Max__c</fullName>
        <label>Secure Repository Account (Max)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Provided_Description__c</fullName>
        <description>Service Provided Description</description>
        <label>Service Provided Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Documents__c</fullName>
        <label>Submitted Documents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Owner__c</fullName>
        <description>System Owner</description>
        <label>System Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Previously_Authorized__c</fullName>
        <description>System Previously Authorized</description>
        <inlineHelpText>Did the CSP have an Agency ATO before coming to FedRAMP?</inlineHelpText>
        <label>System Previously Authorized</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_an_Accredited_3PAO_Assessor_used__c</fullName>
        <description>Was a 3PAO Assessor used?</description>
        <label>Was an Accredited 3PAO Assessor used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3PAO_Used__c</fullName>
        <label>3PAO Used</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CSP__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Prelimnary_SSP_Readiness_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FedRAMP_Director</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>FedRAMP Director</label>
        <queue>FedRAMP_Director</queue>
    </listViews>
    <nameField>
        <displayFormat>F{YY}{MM}{DD}{0000}</displayFormat>
        <label>Package ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FedRAMP_Cost_Savings_needs_PATO_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISNULL( Package_Cost_Savings__c )), ISNULL(PATO_Approved_Date__c) )</errorConditionFormula>
        <errorMessage>Please enter P-ATO Approved Date before adding Package Cost Savings</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FedRAMP_Reason_Removed_Susp_required</fullName>
        <active>true</active>
        <description>Reason Removed or Suspended is required when package is Removed, ATO Cancelled, or Package Exception.</description>
        <errorConditionFormula>AND(
OR(ISPICKVAL(Package_Status__c , &quot;Removed&quot;), ISPICKVAL(Package_Status__c , &quot;ATO Cancelled&quot;), ISPICKVAL(Package_Status__c , &quot;Package Exception&quot;)),
ISBLANK( Denied_Removed_Reason__c ) )</errorConditionFormula>
        <errorMessage>Reason Removed or Suspended is required when Package Status is Removed, ATO Cancelled, or Package Exception</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FedRAMP_SSP_Score_only_w_Submitted_Docs</fullName>
        <active>true</active>
        <description>Preliminary SSP Score can only be set if Submitted Documents are YES</description>
        <errorConditionFormula>AND( ISPICKVAL( Review_Category__c  , &quot;JAB&quot;), 
NOT(ISPICKVAL(  Submitted_Documents__c , &quot;Yes&quot;)), 
NOT(ISPICKVAL( Prelimnary_SSP_Readiness_Rating__c, &quot;&quot; )) 
)</errorConditionFormula>
        <errorDisplayField>Submitted_Documents__c</errorDisplayField>
        <errorMessage>Please check for Submitted Documents before assigning a Preliminary SSP Score to the package</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FedRAMP_needs_PATO_Date_to_Authorize</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Review_Category__c  , &quot;JAB&quot;), ISPICKVAL( Package_Status__c , &quot;Authorized&quot;),   ISNULL(PATO_Approved_Date__c) )</errorConditionFormula>
        <errorMessage>Please enter P-ATO Approved Date to Authorize this package</errorMessage>
    </validationRules>
</CustomObject>